# lengcol

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .semgrepignore  .travis.yml  Dockerfile  Makefile  Procfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  example_env  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_tests.in  requirements_tests.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: deploy.xml  deploy.yml  integration_tests.yml  tox.yml
deployment/: cloudformation.json  deploy.sh  requirements.txt
deployment/ansible/: deploy.yml  hosts
deployment/ansible/files/: encrypted_env
deployment/ansible/files/alertmanager/: alertmanager.yml
deployment/ansible/files/fail2ban/: jail.local  paths-overrides.local
deployment/ansible/tasks/: fail2ban.yml  post_install.yml  pre_install.yml  setup_alertmanager_config.yml  setup_repo.yml
docker/gunicorn/settings/: dev.py  prod.py
docker/logrotate/: Dockerfile  logrotate.conf
docker/nginx/: nginx.conf  nginx.prod.conf
docker/prometheus/: config_promtail.yml
docker/prometheus/config/: alerts_probes_rules.yml  prometheus.prod.yml  prometheus.yml
docker/test/: Dockerfile  requirements.txt
docker/test/integration/: test_definition.py  test_robots.py  test_search.py  test_service.py  utils.py
lengcol/: .coveragerc  .isort.cfg  manage.py
lengcol/authentication/: admin.py  apps.py  factories.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
lengcol/authentication/migrations/: 0001_initial.py  0002_alter_username_field_in_user.py  0003_auto_20200804_2141.py  0004_alter_user_username.py
lengcol/authentication/templates/authentication/: login.html  logout.html  register.html
lengcol/authentication/tests/tasks/: test_new_registered_user.py
lengcol/authentication/tests/views/: tests.py  tests_login.py  tests_logout.py  tests_register.py
lengcol/base/: managers.py  mixins.py  models.py  tests.py
lengcol/base/migrations/: 0001_initial.py  0002_testmodel_active.py
lengcol/definitions/: admin.py  apps.py  context_processors.py  factories.py  forms.py  models.py  services.py  signals.py  sitemaps.py  tasks.py  tests.py  urls.py  views.py
lengcol/definitions/migrations/: 0001_initial.py  0002_term_value_is_unique.py  0003_term_and_definition_inherit_from_base_model.py  0004_term_slug.py  0005_example.py  0006_definition_uuid.py  0007_auto_20190625_2155.py  0008_definition_user.py  0009_add_active_fields_to_models.py  0010_definition_tags.py  0011_update_site_domain_name.py  0012_alter_definition_options.py  0013_alter_term_options.py  0014_definition_definitions_created_0b5729_idx.py  0015_term_definitions_created_8d3d65_idx.py  0016_alter_term_value.py
lengcol/definitions/static/definitions/: style.css
lengcol/definitions/templates/definitions/: by_tag.html  create_definition_and_examples.html  definition.html  definition_confirm_delete.html  definition_detail.html  definition_form.html  definition_update_form.html  index.html  other_definitions.html  tag_list.html  term_detail.html  term_search.html  update_definition_and_examples.html
lengcol/definitions/tests/: tests_models.py  tests_views.py
lengcol/definitions/tests/context_processors/: tests_last_definitions.py  tests_last_terms.py
lengcol/lengcol/: celery.py  settings.py  tests.py  urls.py  views.py  wsgi.py
lengcol/lengcol/settings/: base.py  dev.py  prod.py
requirements/: base.in  base.txt  tests.in  tests.txt
scripts/: collect_static.sh  create_backup.sh  restart_nginx.sh  run_integration_tests.sh  run_migrations.sh
(+34 files in other folders)
