[project]
name = "lengcol"
version = "0.0.1"
dependencies = [
    # App
    "django",
    "django-extensions",
    "django-tagging @ git+https://github.com/bartsanchez/django-tagging.git@develop",
    "dj-database-url",
    "psycopg[binary]",
    "whitenoise",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "django-extra-views",
    "django-recaptcha3",
    "django-recaptcha3 @ git+https://github.com/bartsanchez/django-recaptcha3.git@master",
    "django-prometheus",
    "celery",
    "redis",
    "gunicorn",
    # Tests
    "pytest-django",
    "pytest-cov",
    "pytest-recording",
    "factory_boy",
    "freezegun",
    "requests",
    "ipdb",
    "splinter[django,selenium4]",
    "codecov",
]

[tool.setuptools]
packages = ["lengcol"]

[tool.ruff]
target-version = "py311"

exclude = [
    "lengcol/lengcol/settings/",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",      # flake8-annotations
    "ARG001",   # unused-function-argument
    "ARG002",   # unused-method-argument
    "B904",     # raise-without-from-inside-except
    "D100",     # undocumented-public-module
    "D101",     # undocumented-public-class
    "D102",     # undocumented-public-method
    "D103",     # undocumented-public-function
    "D104",     # undocumented-public-package
    "D105",     # undocumented-magic-method
    "D106",     # undocumented-public-nested-class
    "D107",     # undocumented-public-init
    "D203",     # one-blank-line-before-class
    "D212",     # multi-line-summary-first-line
    "E501",     # line-too-long
    "FIX002",   # line-contains-todo
    "INP001",   # implicit-namespace-package
    "PLR2004",  # magic-value-comparison
    "PT009",    # pytest-unittest-assertion
    "RUF012",   # mutable-class-default
    "S101",     # assert
    "S106",     # hardcoded-password-string
    "SLF001",   # private-member-access
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
    "TRY003",   # raise-vanilla-args
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lengcol.settings.base"
python_files = "tests.py test*"
